--- a/blog.html
+++ b/blog.html
@@ -7,89 +7,35 @@
   <title>Blog Legal - DivorcioPro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #f8f9fa;
-    }
+  <link rel="stylesheet" href="assets/css/blog.css">
 
-    .hero {
-      background-color: #f1f5ff;
-      padding: 4rem 0;
-      text-align: center;
-    }
-
-    .hero h1 {
-      font-weight: 700;
-    }
-
-    .hero span.text-primary {
-      color: #2563EB !important;
-    }
-
-    .badge-custom {
-      background-color: #e0d3f5;
-      color: #6b21a8;
-      font-size: 0.75rem;
-    }
-
-    .blog-card {
-      background: #fff;
-      border-radius: 0.5rem;
-      box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, .075);
-      padding: 1.5rem;
-      margin-bottom: 1.5rem;
-    }
-
-    .blog-footer {
-      background: #0f172a;
-      color: #fff;
-      padding: 3rem 0;
-    }
-
-    .blog-footer h5 {
-      font-weight: bold;
-    }
-
-    .blog-footer a {
-      color: #cbd5e1;
-      text-decoration: none;
-      display: block;
-      margin-bottom: 0.5rem;
-    }
-
-    .tag {
-      font-size: 0.75rem;
-      margin-right: 0.5rem;
-    }
-  </style>
 </head>
 
 <body>
 
   <!-- Navbar -->
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
-        <div class="container">
-            <a class="navbar-brand fw-bold text-primary" href="index.html">Divorcios Online</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
+    <div class="container">
+      <a class="navbar-brand fw-bold text-primary" href="index.html">Divorcios Online</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-            <div class="collapse navbar-collapse" id="navMenu">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="index.html#servicios">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="calculadora.html">Calculadora</a></li>
-                    <li class="nav-item"><a class="nav-link" href="citas.html">Citas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="testimonios.html">Testimonios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                    <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
-                    <li class="nav-item">
-                        <a class="btn btn-primary ms-2" href="index.html#consulta">Consulta Gratuita</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+      <div class="collapse navbar-collapse" id="navMenu">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="index.html#servicios">Servicios</a></li>
+          <li class="nav-item"><a class="nav-link" href="calculadora.html">Calculadora</a></li>
+          <li class="nav-item"><a class="nav-link" href="citas.html">Citas</a></li>
+          <li class="nav-item"><a class="nav-link" href="testimonios.html">Testimonios</a></li>
+          <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
+          <li class="nav-item">
+            <a class="btn btn-primary ms-2" href="index.html#consulta">Consulta Gratuita</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <!-- Hero -->
   <section class="hero mt-5 pt-5">
@@ -213,12 +159,10 @@
       <p class="mb-4">Nuestros artículos son informativos, pero cada caso es único. Habla con nuestros abogados
         especializados para obtener consejos específicos para tu situación.</p>
       <a class="btn btn-primary px-4 me-2" href="#consulta">Consulta Gratuita</a>
-
     </div>
 
-
   </section>
-
+  
   <footer class="footer bg-dark text-white pt-5 pb-3">
     <div class="container">
       <div class="row">
@@ -261,8 +205,8 @@
     </div>
   </footer>
 
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
