--- a/calculadora.html
+++ b/calculadora.html
@@ -5,59 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Costos</title>
+    <link rel="stylesheet" href="assets/css/calculadora.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f9f9fb;
-        }
 
-        .section-title {
-            font-size: 2rem;
-            font-weight: bold;
-        }
-
-        .subtext {
-            color: #555;
-        }
-
-        .option-group {
-            background-color: #fff;
-            border-radius: 10px;
-            padding: 20px;
-            margin-bottom: 20px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.05);
-        }
-
-        .resultado {
-            background-color: #eaf4ff;
-            border-radius: 10px;
-            padding: 20px;
-        }
-
-        .form-check-input[type="radio"] {
-            cursor: pointer;
-        }
-
-        .hero {
-            background-color: #f1f5ff;
-            padding: 4rem 0;
-            text-align: center;
-        }
-
-        .hero h1 {
-            font-weight: 700;
-        }
-
-        .hero span.text-primary {
-            color: #2563EB !important;
-        }
-
-        .badge-custom {
-            background-color: #e0d3f5;
-            color: #6b21a8;
-            font-size: 0.75rem;
-        }
-    </style>
 </head>
 
 <body>
@@ -222,7 +172,8 @@
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Enlaces Útiles</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html#servicios" class="text-white text-decoration-none">Nuestros Servicios</a></li>
+                        <li><a href="index.html#servicios" class="text-white text-decoration-none">Nuestros
+                                Servicios</a></li>
                         <li><a href="index.html#proceso" class="text-white text-decoration-none">Proceso</a></li>
                         <li><a href="calculadora.html" class="text-white text-decoration-none">Calculadora</a></li>
                         <li><a href="citas.html" class="text-white text-decoration-none">Citas</a></li>
@@ -251,82 +202,7 @@
         </div>
     </footer>
 
-    <script>
-
-        function calcularCosto() {
-            const tasaCambio = 60; // 1 USD = 60 DOP
-
-            let totalDOP = 0;
-            let resumen = [];
-
-            // Tipo de divorcio (radio button)
-            const tipoDivorcio = document.querySelector('input[name="divorcio"]:checked');
-            if (tipoDivorcio) {
-                totalDOP += parseFloat(tipoDivorcio.value);
-                resumen.push(tipoDivorcio.nextElementSibling.innerText);
-            }
-
-            // Servicios adicionales (checkboxes)
-            document.querySelectorAll('input[type="checkbox"]:checked').forEach(el => {
-                totalDOP += parseFloat(el.value);
-                resumen.push(el.nextElementSibling.innerText);
-            });
-
-            // Urgencia (radio button con porcentaje)
-            const urgencia = document.querySelector('input[name="urgencia"]:checked');
-            if (urgencia) {
-                const porcentaje = parseFloat(urgencia.value);
-                resumen.push(urgencia.nextElementSibling.innerText);
-                totalDOP += totalDOP * porcentaje;
-            }
-
-            // ✅ Redondeo: siempre que termine en "0" (redondeo a decena)
-            const totalDOPRedondeado = Math.round(totalDOP / 10) * 10;
-
-            // Conversión a USD
-            const totalUSD = Math.round(totalDOPRedondeado / tasaCambio);
-
-            // Mostrar resumen
-            const ul = document.getElementById("resumenOpciones");
-            ul.innerHTML = "";
-            resumen.forEach(opcion => {
-                const li = document.createElement("li");
-                li.innerText = opcion;
-                ul.appendChild(li);
-            });
-
-            // Mostrar resultado limpio
-            const resultadoTotal = document.getElementById("resultadoTotal");
-            resultadoTotal.style.display = "block";
-            resultadoTotal.innerHTML = `DOP ${totalDOPRedondeado.toLocaleString()}<br>USD ${totalUSD}`;
-
-            // Mostrar recuadro de confirmación
-            const confirmacion = document.getElementById("confirmacion");
-            confirmacion.style.display = "block";
-        }
-
-
-
-
-        ocument.getElementById("calcularBtn").addEventListener("click", function () {
-            let total = 0;
-            let seleccion = [];
-
-            const checkboxes = document.querySelectorAll('input[type="radio"]:checked');
-            checkboxes.forEach((checkbox) => {
-                total += parseInt(checkbox.value);
-                seleccion.push(checkbox.dataset.nombre);
-            });
-
-            const resultadoTotal = document.getElementById("resultadoTotal");
-            resultadoTotal.style.display = "block";
-            resultadoTotal.innerHTML = `Costo total estimado: $${total}`;
-
-            const confirmacion = document.getElementById("confirmacion");
-            confirmacion.style.display = "block";
-        });
-
-    </script>
+    <script src="assets/js/calculadora.js"></script>
 
 </body>
 
