--- a/citaCompleta.html
+++ b/citaCompleta.html
@@ -6,71 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>¡Cita Confirmada!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f5f9ff;
-            font-family: 'Segoe UI', sans-serif;
-        }
+    <link rel="stylesheet" href="assets/css/citaCompleta.css">
 
-        .cita-container {
-            max-width: 800px;
-            margin: 50px auto;
-            background: #fff;
-            padding: 40px;
-            border-radius: 15px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.05);
-            text-align: center;
-        }
-
-        .titulo {
-            font-size: 2.5rem;
-            color: #0056b3;
-            font-weight: bold;
-        }
-
-        .subtitulo {
-            font-size: 1.2rem;
-            margin-top: 10px;
-            color: #333;
-        }
-
-        .confirmado-box {
-            background-color: #e9f5ff;
-            padding: 30px;
-            border-radius: 10px;
-            margin-top: 30px;
-            text-align: left;
-        }
-
-        .confirmado-box h3 {
-            color: #007bff;
-            font-weight: 600;
-        }
-
-        .detalles p {
-            margin: 0;
-            font-size: 1.1rem;
-            padding: 5px 0;
-        }
-
-        .info-iconos {
-            margin-top: 30px;
-            text-align: left;
-        }
-
-        .info-iconos p {
-            font-size: 1rem;
-            margin-bottom: 10px;
-        }
-
-        .botones {
-            margin-top: 30px;
-        }
-
-        .botones a {
-            margin: 0 10px;
-        }
-    </style>
 </head>
 
 <body>
@@ -103,13 +40,7 @@
         </div>
     </div>
 
-    <script>
-        // Cargar los datos almacenados
-        document.getElementById("fechaCita").innerText = localStorage.getItem("fechaSeleccionada") || "No seleccionada";
-        document.getElementById("horaCita").innerText = localStorage.getItem("horaSeleccionada") || "No seleccionada";
-        document.getElementById("tipoConsulta").innerText = localStorage.getItem("tipoConsulta") || "No especificada";
-        document.getElementById("emailUsuario").innerText = localStorage.getItem("correoUsuario") || "No proporcionado";
-    </script>
+    <script src="assets/js/citaCompleta.js"></script>
 
 </body>
 
