--- a/citas.html
+++ b/citas.html
@@ -4,63 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda tu Cita - Paso 1</title>
+    <link rel="stylesheet" href="assets/css/citas.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet">
-    <style>
-        .hero {
-            background-color: #f1f5ff;
-            padding: 4rem 0;
-            text-align: center;
-        }
 
-        .hero h1 {
-            font-weight: 700;
-        }
-
-        .hero span.text-primary {
-            color: #2563EB !important;
-        }
-
-        .badge-custom {
-            background-color: #e0d3f5;
-            color: #6b21a8;
-            font-size: 0.75rem;
-        }
-
-        body {
-            background-color: #f8f9fa;
-        }
-
-        .step-indicator {
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        .calendar-card {
-            max-width: 500px;
-            margin: auto;
-        }
-
-        .hero {
-            background-color: #f1f5ff;
-            padding: 4rem 0;
-            text-align: center;
-        }
-
-        .hero h1 {
-            font-weight: 700;
-        }
-
-        .hero span.text-primary {
-            color: #2563EB !important;
-        }
-
-        .badge-custom {
-            background-color: #e0d3f5;
-            color: #6b21a8;
-            font-size: 0.75rem;
-        }
-    </style>
 </head>
 
 <body>
@@ -131,7 +78,8 @@
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Enlaces Útiles</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html#servicios" class="text-white text-decoration-none">Nuestros Servicios</a></li>
+                        <li><a href="index.html#servicios" class="text-white text-decoration-none">Nuestros
+                                Servicios</a></li>
                         <li><a href="index.html#proceso" class="text-white text-decoration-none">Proceso</a></li>
                         <li><a href="calculadora.html" class="text-white text-decoration-none">Calculadora</a></li>
                         <li><a href="citas.html" class="text-white text-decoration-none">Citas</a></li>
@@ -160,41 +108,9 @@
         </div>
     </footer>
 
+    <script src="assets/js/citas.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script>
-       document.addEventListener("DOMContentLoaded", () => {
-    const inputFecha = document.getElementById('fecha-cita');
-    const btnSiguiente = document.getElementById('siguiente-btn');
-
-    const hoy = new Date();
-    const maxFecha = new Date();
-    maxFecha.setDate(hoy.getDate() + 13); // Próximos 14 días contando hoy
-
-    flatpickr(inputFecha, {
-        dateFormat: "Y-m-d",
-        minDate: hoy,
-        maxDate: maxFecha,
-        disable: [
-            function (date) {
-                return (date.getDay() === 0 || date.getDay() === 6); // domingos y sábados
-            }
-        ],
-        onChange: function (selectedDates, dateStr) {
-            btnSiguiente.disabled = selectedDates.length === 0;
-        }
-    });
-
-    btnSiguiente.addEventListener('click', () => {
-        const fechaSeleccionada = inputFecha.value;
-        if (fechaSeleccionada) {
-            localStorage.setItem("fechaSeleccionada", fechaSeleccionada);
-            window.location.href = "horas.html";
-        }
-    });
-});
-
-    </script>
 
 </body>
 
