--- a/faq.html
+++ b/faq.html
@@ -10,103 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/faq.css">
 
-    <style>
-        body {
-            background-color: #f8f9fa;
-            font-family: 'Roboto', sans-serif;
-        }
-
-        /* Hero */
-        .hero {
-            background-color: #f1f5ff;
-            padding: 4rem 0;
-            text-align: center;
-        }
-
-        .hero h1 {
-            font-weight: 700;
-        }
-
-        .hero span.text-primary {
-            color: #2563EB !important;
-        }
-
-        .badge-custom {
-            background-color: #e0d3f5;
-            color: #6b21a8;
-            font-size: 0.75rem;
-        }
-
-        /* Sección preguntas */
-        .faq-section {
-            max-width: 900px;
-            margin: 3rem auto 5rem;
-            padding: 0 1rem;
-        }
-
-        .faq-category {
-            margin-bottom: 2rem;
-        }
-
-        .faq-category h3 {
-            color: #2563EB;
-            font-weight: 700;
-            margin-bottom: 1rem;
-        }
-
-        /* Bloques destacados */
-        .highlights {
-            background-color: white;
-            max-width: 900px;
-            margin: 0 auto 4rem;
-            padding: 2rem 1rem;
-            border-radius: 10px;
-            box-shadow: 0 0 15px rgb(37 99 235 / 0.15);
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-            gap: 1.5rem;
-        }
-
-        .highlight-item {
-            text-align: center;
-            flex: 1 1 250px;
-        }
-
-        .highlight-item i {
-            font-size: 2.5rem;
-            color: #2563EB;
-            margin-bottom: 0.5rem;
-        }
-
-        .highlight-item p {
-            font-weight: 600;
-            font-size: 1.1rem;
-            margin: 0;
-            color: #444;
-        }
-
-        /* Botones al pie */
-        .faq-footer-buttons {
-            text-align: center;
-            margin-bottom: 4rem;
-            gap: 1rem;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-
-        .faq-footer-buttons a {
-            min-width: 180px;
-        }
-
-        /* Buscador */
-        #searchFaq {
-            max-width: 400px;
-            margin: 0 auto 3rem;
-        }
-    </style>
 </head>
 
 <body>
@@ -413,7 +318,8 @@
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Enlaces Útiles</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html#servicios" class="text-white text-decoration-none">Nuestros Servicios</a></li>
+                        <li><a href="index.html#servicios" class="text-white text-decoration-none">Nuestros
+                                Servicios</a></li>
                         <li><a href="index.html#proceso" class="text-white text-decoration-none">Proceso</a></li>
                         <li><a href="calculadora.html" class="text-white text-decoration-none">Calculadora</a></li>
                         <li><a href="citas.html" class="text-white text-decoration-none">Citas</a></li>
@@ -441,43 +347,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Script para buscador FAQ -->
-    <script>
-        const inputBuscar = document.getElementById('inputBuscar');
-        const faqSection = document.getElementById('faqSection');
-
-        inputBuscar.addEventListener('input', () => {
-            const filtro = inputBuscar.value.toLowerCase();
-
-            // Obtener todas las preguntas y categorías
-            const categorias = faqSection.querySelectorAll('.faq-category');
-
-            categorias.forEach(categoria => {
-                let categoriaVisible = false;
-
-                const items = categoria.querySelectorAll('.accordion-item');
-
-                items.forEach(item => {
-                    const preguntaBtn = item.querySelector('button.accordion-button');
-                    const textoPregunta = preguntaBtn.textContent.toLowerCase();
-                    const respuestaDiv = item.querySelector('.accordion-body').textContent.toLowerCase();
-
-                    if (textoPregunta.includes(filtro) || respuestaDiv.includes(filtro)) {
-                        item.style.display = '';
-                        categoriaVisible = true;
-                    } else {
-                        item.style.display = 'none';
-                    }
-                });
-
-                // Mostrar u ocultar categoría según si tiene items visibles
-                if (categoriaVisible) {
-                    categoria.style.display = '';
-                } else {
-                    categoria.style.display = 'none';
-                }
-            });
-        });
-    </script>
+    <script src="assets/js/faq.js"></script>
 </body>
 
 </html>
