--- a/horas.html
+++ b/horas.html
@@ -5,47 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Selecciona la Hora - Citas</title>
+    <link rel="stylesheet" href="assets/css/horas.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-    <style>
-        .hero {
-            background-color: #f1f5ff;
-            padding: 4rem 0;
-            text-align: center;
-        }
+    
 
-        .hero h1 {
-            font-weight: 700;
-        }
-
-        .hero span.text-primary {
-            color: #2563EB !important;
-        }
-
-        .badge-custom {
-            background-color: #e0d3f5;
-            color: #6b21a8;
-            font-size: 0.75rem;
-        }
-
-        body {
-            background-color: #f8f9fa;
-        }
-
-        .hora-card {
-            cursor: pointer;
-            border: 2px solid transparent;
-            transition: border-color 0.3s;
-            user-select: none;
-        }
-
-        .hora-card.selected {
-            border-color: #2563eb;
-            background-color: #eaf4ff;
-        }
-    </style>
 </head>
-
 <body>
 
     <!-- Navbar -->
@@ -82,11 +47,7 @@
         </div>
     </section>
 
-
-
     <div class="container py-5">
-
-
 
         <h3 class="step-indicator text-center text-primary">Paso 2 de 4: Selecciona la Hora</h3>
 
@@ -149,79 +110,9 @@
             </div>
         </div>
     </footer>
-
+    
+    <script src="assets/js/horas.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script>
-        const horasDisponibles = [
-            "08:00 AM",
-            "09:00 AM",
-            "10:00 AM",
-            "11:00 AM",
-            "12:00 PM",
-            "01:00 PM",
-            "02:00 PM",
-            "03:00 PM",
-            "04:00 PM",
-            "05:00 PM",
-            "06:00 PM"
-        ];
-
-        const horasContainer = document.getElementById("horasContainer");
-        const fechaSeleccionadaDiv = document.getElementById("fechaSeleccionada");
-        const confirmarBtn = document.getElementById("confirmarHoraBtn");
-        const mensajeConfirmacion = document.getElementById("mensajeConfirmacion");
-
-        let horaSeleccionada = null;
-
-        // Mostrar la fecha seleccionada guardada
-        const fechaGuardada = localStorage.getItem("fechaSeleccionada");
-        if (!fechaGuardada) {
-            alert("No se ha seleccionado una fecha. Por favor, regresa al paso 1.");
-            window.location.href = "citas.html";
-        } else {
-            const fechaObj = new Date(fechaGuardada);
-            const opcionesFecha = { weekday: "long", year: "numeric", month: "long", day: "numeric" };
-            fechaSeleccionadaDiv.textContent = `Fecha seleccionada: ${fechaObj.toLocaleDateString("es-ES", opcionesFecha)}`;
-        }
-
-        // Crear tarjetas de horas
-        horasDisponibles.forEach(hora => {
-            const col = document.createElement("div");
-            col.className = "col";
-
-            const card = document.createElement("div");
-            card.className = "card hora-card text-center p-3";
-            card.textContent = hora;
-            card.setAttribute("tabindex", "0");
-            card.addEventListener("click", () => seleccionarHora(card, hora));
-            card.addEventListener("keypress", e => {
-                if (e.key === "Enter" || e.key === " ") seleccionarHora(card, hora);
-            });
-
-            col.appendChild(card);
-            horasContainer.appendChild(col);
-        });
-
-        const siguienteHoraBtn = document.getElementById("siguienteHoraBtn");
-
-        function seleccionarHora(card, hora) {
-            document.querySelectorAll(".hora-card.selected").forEach(c => c.classList.remove("selected"));
-            card.classList.add("selected");
-            horaSeleccionada = hora;
-            siguienteHoraBtn.disabled = false;
-        }
-
-        siguienteHoraBtn.addEventListener("click", () => {
-            if (!horaSeleccionada) {
-                alert("Por favor selecciona una hora.");
-                return;
-            }
-            // Guardamos la hora y vamos al paso 3
-            localStorage.setItem("horaSeleccionada", horaSeleccionada);
-            window.location.href = "formulario.html";
-        });
-    </script>
 </body>
-
 </html>
