--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
   <!-- Estilos personalizados -->
-  <link rel="stylesheet" href="css/style.css" />
-
-  <!-- Scripts Bootstrap y JS personalizado -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/main.js"></script>
+  <link rel="stylesheet" href="assets/css/index.css" />
 
 </head>
 
@@ -244,12 +240,14 @@
               Consulta 100% online
             </li>
             <li class="mb-2">
-              <a href="https://wa.me/18294877541?text=Hola,%20necesito%20ayuda" target="_blank" rel="noopener noreferrer" class="btn btn-outline-success">
+              <a href="https://wa.me/18294877541?text=Hola,%20necesito%20ayuda" target="_blank"
+                rel="noopener noreferrer" class="btn btn-outline-success">
                 <i class="bi bi-whatsapp me-1"></i> Escríbeme
               </a>
             </li>
             <li class="mb-2">
-              <a href="https://www.instagram.com/divorcios.do/#" target="_blank" rel="noopener noreferrer" class="btn btn-outline-primary">
+              <a href="https://www.instagram.com/divorcios.do/#" target="_blank" rel="noopener noreferrer"
+                class="btn btn-outline-primary">
                 <i class="bi bi-instagram me-1"></i> Conoceme
               </a>
             </li>
@@ -319,73 +317,13 @@
     </div>
   </footer>
 
-  <style>
-    .whatsapp-float {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      z-index: 999;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-    }
-
-    .whatsapp-float:hover {
-      transform: scale(1.1);
-    }
-  </style>
-
   <a href="https://wa.me/+18294877541?text=Hola,%20necesito%20ayuda" target="_blank" class="whatsapp-float">
     <img src="https://media.tenor.com/ipP4Q7xYznwAAAAj/araslot-whatsapp.gif" alt="Whatsapp" width="50" height="50">
   </a>
 
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    const form = document.getElementById("consultaForm");
-
-    form.addEventListener("submit", async function (e) {
-      e.preventDefault();
-
-      // Verificamos campos con HTML5
-      if (!form.checkValidity()) {
-        form.classList.add("was-validated");
-        return;
-      }
-
-      // Recolectamos los datos
-      const datos = {
-        nombre: document.getElementById("nombre").value.trim(),
-        correo: document.getElementById("correo").value.trim(),
-        telefono: document.getElementById("telefono").value.trim(),
-        tipoDivorcio: document.getElementById("tipoDivorcio").value,
-        mensaje: document.getElementById("mensaje").value.trim()
-      };
-
-      try {
-        const res = await fetch("http://localhost:5000/api/consulta", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify(datos)
-        });
-
-        const result = await res.json();
-
-        if (res.ok) {
-          alert("✅ Consulta enviada satisfactoriamente. Te contactaremos pronto.");
-          form.reset();
-          form.classList.remove("was-validated");
-        } else {
-          alert("❌ Hubo un problema: " + result.message);
-        }
-      } catch (error) {
-        console.error(error);
-        alert("❌ Error al enviar el formulario. Intenta de nuevo.");
-      }
-    });
-  });
-</script>
-
+  <!-- Scripts Bootstrap y JS personalizado -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/index.js"></script>
 
 </body>
 
