--- a/testimonios.html
+++ b/testimonios.html
@@ -6,67 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Testimonios - Casos de Éxito</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <style>
-        .hero {
-            background-color: #f1f5ff;
-            padding: 4rem 0;
-            text-align: center;
-        }
+    <link rel="stylesheet" href="assets/css/testimonios.css">
 
-        .hero h1 {
-            font-weight: 700;
-        }
-
-        .hero span.text-primary {
-            color: #2563EB !important;
-        }
-
-        .badge-custom {
-            background-color: #e0d3f5;
-            color: #6b21a8;
-            font-size: 0.75rem;
-        }
-
-        .titulo-principal {
-            font-size: 2.5rem;
-            font-weight: 800;
-            color: #1f2937;
-            line-height: 1.2;
-        }
-
-        .subtitulo {
-            font-size: 1.1rem;
-            color: #6b7280;
-            max-width: 600px;
-            margin: 0 auto 2rem;
-        }
-
-        .resumen-puntos {
-            display: flex;
-            justify-content: center;
-            gap: 3rem;
-            margin-bottom: 3rem;
-            flex-wrap: wrap;
-        }
-
-        .punto {
-            text-align: center;
-            font-weight: 600;
-            color: #374151;
-        }
-
-        .testimonio-card {
-            background-color: #f9fafb;
-            border-radius: 10px;
-            padding: 1.5rem;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-            height: 100%;
-        }
-
-        .estrellas {
-            color: #facc15;
-        }
-    </style>
 </head>
 
 <body>
